ci: setup playwright
Added support for playwright e2e tests.

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
     <title>ngx-datatable - Angular component for presenting large and complex data</title>
     <base href="/" />
