--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>ngx-datatable - Angular component for presenting large and complex data</title>
-    <base href="/" />
+    <base href="" />
 
     <!-- Name of web application (only should be used if the website is used as an app) -->
     <meta name="application-name" content="ngx-datatable" />
